[tool.poetry]
name = "tinvest"
version = "1.0.12"
description = "Tinkoff Invest"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/daxartio/tinvest"
homepage = "https://pypi.org/project/tinvest"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aiohttp = ">=3.6,<4.0"
requests = ">=2.22,<3.0"
pydantic = ">=1.2,<2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allows-prereleases = true}
flake8-awesome = "^1.2"
mypy = "^0.750.0"
pylint = "^2.4"
pytest = "^5.3"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.13"
pytest-asyncio = "^0.10"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"